Plugins/UnrealDotNet/Source/NetCoreProject/UnrealEngine/Generate/Class/UCharacterMovementComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_NotifyObjectReferenceEliminated(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_PostCDOContruct(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_PostEditImport(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_PostRepNotifies(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_PostSaveRoot(IntPtr Self, bool bCleanupIsRequired);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_PreDestroyFromReplication(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_ShutdownAfterError(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_AddToCluster(IntPtr Self, IntPtr ClusterRootOrObjectFromCluster, bool bAddAsMutableObject);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UCharacterMovementComponent_CanBeClusterRoot(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UCharacterMovementComponent_CanBeInCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_CreateCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UCharacterMovementComponent_OnClusterMarkedAsPendingKill(IntPtr Self);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// <para>When falling, amount of lateral movement control available to the character. </para>
		/// <para>0 = no control, 1 = full control at max speed of MaxWalkSpeed. </para>
		/// </summary>
		public float AirControl
		{
			get => E_PROP_UCharacterMovementComponent_AirControl_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_AirControl_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When falling, multiplier applied to AirControl when lateral velocity is less than AirControlBoostVelocityThreshold. </para>
		/// <para>Setting this to zero will disable air control boosting. Final result is clamped at 1. </para>
		/// </summary>
		public float AirControlBoostMultiplier
		{
			get => E_PROP_UCharacterMovementComponent_AirControlBoostMultiplier_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_AirControlBoostMultiplier_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When falling, if lateral velocity magnitude is less than this value, AirControl is multiplied by AirControlBoostMultiplier. </para>
		/// <para>Setting this to zero will disable air control boosting. </para>
		/// </summary>
		public float AirControlBoostVelocityThreshold
		{
			get => E_PROP_UCharacterMovementComponent_AirControlBoostVelocityThreshold_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_AirControlBoostVelocityThreshold_SET(NativePointer, value);
		}

		public float AvoidanceConsiderationRadius
		{
			get => E_PROP_UCharacterMovementComponent_AvoidanceConsiderationRadius_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_AvoidanceConsiderationRadius_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>No default value, for now it's assumed to be valid if GetAvoidanceManager() returns non-NULL. </para>
		/// </summary>
		public int AvoidanceUID
		{
			get => E_PROP_UCharacterMovementComponent_AvoidanceUID_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_AvoidanceUID_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>De facto default value 0.5 (due to that being the default in the avoidance registration function), indicates RVO behavior. </para>
		/// </summary>
		public float AvoidanceWeight
		{
			get => E_PROP_UCharacterMovementComponent_AvoidanceWeight_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_AvoidanceWeight_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If enabled, the player will interact with physics objects when walking into them. </para>
		/// </summary>
		public bool bEnablePhysicsInteraction
		{
			get => E_PROP_UCharacterMovementComponent_bEnablePhysicsInteraction_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_bEnablePhysicsInteraction_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If enabled, the PushForceFactor is applied per kg mass of the affected object. </para>
		/// </summary>
		public bool bPushForceScaledToMass
		{
			get => E_PROP_UCharacterMovementComponent_bPushForceScaledToMass_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_bPushForceScaledToMass_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If enabled, the PushForce location is moved using PushForcePointZOffsetFactor. Otherwise simply use the impact point. </para>
		/// </summary>
		public bool bPushForceUsingZOffset
		{
			get => E_PROP_UCharacterMovementComponent_bPushForceUsingZOffset_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_bPushForceUsingZOffset_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Lateral deceleration when falling and not applying acceleration. </para>
		/// <para>@see MaxAcceleration </para>
		/// </summary>
		public float BrakingDecelerationFalling
		{
			get => E_PROP_UCharacterMovementComponent_BrakingDecelerationFalling_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_BrakingDecelerationFalling_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Deceleration when flying and not applying acceleration. </para>
		/// <para>@see MaxAcceleration </para>
		/// </summary>
		public float BrakingDecelerationFlying
		{
			get => E_PROP_UCharacterMovementComponent_BrakingDecelerationFlying_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_BrakingDecelerationFlying_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Deceleration when swimming and not applying acceleration. </para>
		/// <para>@see MaxAcceleration </para>
		/// </summary>
		public float BrakingDecelerationSwimming
		{
			get => E_PROP_UCharacterMovementComponent_BrakingDecelerationSwimming_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_BrakingDecelerationSwimming_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Deceleration when walking and not applying acceleration. This is a constant opposing force that directly lowers velocity by a constant value. </para>
		/// <para>@see GroundFriction, MaxAcceleration </para>
		/// </summary>
		public float BrakingDecelerationWalking
		{
			get => E_PROP_UCharacterMovementComponent_BrakingDecelerationWalking_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_BrakingDecelerationWalking_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Friction (drag) coefficient applied when braking (whenever Acceleration = 0, or if character is exceeding max speed); actual value used is this multiplied by BrakingFrictionFactor. </para>
		/// <para>When braking, this property allows you to control how much friction is applied when moving across the ground, applying an opposing force that scales with current velocity. </para>
		/// <para>Braking is composed of friction (velocity-dependent drag) and constant deceleration. </para>
		/// <para>This is the current value, used in all movement modes; if this is not desired, override it or bUseSeparateBrakingFriction when movement mode changes. </para>
		/// <para>@note Only used if bUseSeparateBrakingFriction setting is true, otherwise current friction such as GroundFriction is used. </para>
		/// <para>@see bUseSeparateBrakingFriction, BrakingFrictionFactor, GroundFriction, BrakingDecelerationWalking </para>
		/// </summary>
		public float BrakingFriction
		{
			get => E_PROP_UCharacterMovementComponent_BrakingFriction_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_BrakingFriction_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Factor used to multiply actual value of friction used when braking. </para>
		/// <para>This applies to any friction value that is currently used, which may depend on bUseSeparateBrakingFriction. </para>
		/// <para>@note This is 2 by default for historical reasons, a value of 1 gives the true drag equation. </para>
		/// <para>@see bUseSeparateBrakingFriction, GroundFriction, BrakingFriction </para>
		/// </summary>
		public float BrakingFrictionFactor
		{
			get => E_PROP_UCharacterMovementComponent_BrakingFrictionFactor_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_BrakingFrictionFactor_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If enabled, the applied push force will try to get the physics object to the same velocity than the player, not faster. This will only </para>
		/// <para>scale the force down, it will never apply more force than defined by PushForceFactor. </para>
		/// </summary>
		public bool bScalePushForceToVelocity
		{
			get => E_PROP_UCharacterMovementComponent_bScalePushForceToVelocity_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_bScalePushForceToVelocity_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If enabled, the TouchForceFactor is applied per kg mass of the affected object. </para>
		/// </summary>
		public bool bTouchForceScaledToMass
		{
			get => E_PROP_UCharacterMovementComponent_bTouchForceScaledToMass_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_bTouchForceScaledToMass_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Water buoyancy. A ratio (1.0 = neutral buoyancy, 0.0 = no buoyancy) </para>
		/// </summary>
		public float Buoyancy
		{
			get => E_PROP_UCharacterMovementComponent_Buoyancy_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_Buoyancy_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Last valid projected hit result from raycast to geometry from navmesh </para>
		/// </summary>
		public FHitResult CachedProjectedNavMeshHitResult
		{
			get => E_PROP_UCharacterMovementComponent_CachedProjectedNavMeshHitResult_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_CachedProjectedNavMeshHitResult_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Collision half-height when crouching (component scale is applied separately) </para>
		/// </summary>
		public float CrouchedHalfHeight
		{
			get => E_PROP_UCharacterMovementComponent_CrouchedHalfHeight_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_CrouchedHalfHeight_SET(NativePointer, value);
		}

		public float CrouchedSpeedMultiplier_DEPRECATED
		{
			get => E_PROP_UCharacterMovementComponent_CrouchedSpeedMultiplier_DEPRECATED_GET(NativePointer);
			set => E_PROP_UCharacterMovementComponent_CrouchedSpeedMultiplier_DEPRECATED_SET(NativePointer, value);
		}

